<resources>
    <string name="app_name">User data</string>

    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>

    <string name="full_name">Name</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="full_address">Address</string>
    <string name="country">Country</string>
    <string name="town">Town</string>
    <string name="address">Address</string>
    <string name="full_comment">Comment</string>
    <string name="comment">Comment</string>
    
    <string name="exit_confirmation">Do you really want to exit?</string>
    <string name="cancel_confirmation">Do you really want cancel changes?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>